# HoshinoBot

./: pyproject.toml
