[tool.poetry]
name = "hoshinobot"
version = "0.1.0"
description = ""
authors = ["Cain-Scarlet <acgnfantasy@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua-mirror"
url = "https://mirrors.aliyun.com/pypi/simple"
priority="default"

[tool.poetry.dependencies]
python = "^3.9"
quart = "0.14.1"
markupsafe = ">=1.0,<2.0"
jinja2 = ">=2.11.2,<2.12.0"
werkzeug = ">=1.0.1,<1.1.0"
wsproto = ">=0.15.0,<0.16.0"
nonebot = {version = "1.8.0", extras = ["scheduler"]}
aiocqhttp = ">=1.4.0,<1.5.0"
aiohttp = ">=3.8.1,<3.9.0"
lxml = ">=4.9.1"
pytz = ">=2019.3"
requests = ">=2.23.0"
sogou-tr-free = ">=0.0.8,<0.1.0"
zhconv = ">=1.4.1,<1.5.0"
pillow = ">=9.1.0,<9.2.0"
matplotlib = ">=3.2.1,<3.3.0"
numpy = ">=1.22.3,<1.23.0"
beautifulsoup4 = ">=4.9.0,<4.10.0"
pygtrie = ">=2.3.3,<2.4.0"
tinydb = ">=4.1.1,<4.2.0"
peony-twitter = {version = ">=2.1.2,<2.2.0", extras = ["all"]}
cloudscraper = ">=1.2.60,<1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"